# ce

./: Cargo.toml  README.md  WALKTHROUGH.md
docs/: AGENT_SYSTEM_ARCHITECTURE.md  AGENT_SYSTEM_IMPLEMENTATION_PLAN.md  MODAL_ARCHITECTURE.md
shaders/: rectangles.wgsl
src/: app.rs  app_event.rs  clipboard.rs  cursor.rs  document.rs  editor.rs  gpu.rs  input.rs  lsp.rs  main.rs  modal.rs  project.rs  render.rs  syntax.rs  theme.rs
src/agent/: mod.rs  model.rs  panel.rs  reducer.rs  runtime.rs
