[package]
name = "editor"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A small, native code editor for macOS"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.12"
pollster = "0.4"
rfd = "0.17.2"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
unicode-segmentation = "1"
wgpu = "30"
winit = "0.30"
